force-app/main/default/objects/Project_Task__c/fields/Deadline_Pretty__c.field-meta.xml
<CustomField>
    <fullName>Deadline_Pretty__c</fullName>
    <formula>LPAD(TEXT(DAY(Deadline__c)), 2, &quot;0&quot;) &amp; &quot;-&quot; &amp;
LPAD(TEXT(MONTH(Deadline__c)), 2, &quot;0&quot;) &amp; &quot;-&quot; &amp;
TEXT(YEAR(Deadline__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deadline (Pretty)</label>
    <type>Text</type>
</CustomField>