force-app/main/default/objects/Project_Task__c/fields/Flow_Link__c.field-meta.xml
<CustomField>
    <fullName>Flow_Link__c</fullName>
    <label>Flow Link</label>
    <type>Url</type>
</CustomField>