force-app/main/default/objects/Project_Task__c/fields/Is_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Is_Overdue__c</fullName>
    <formula>AND(
  Deadline__c &lt; TODAY(),
  NOT(
    OR(
      ISPICKVAL(Status__c, &quot;Completed&quot;),
      ISPICKVAL(Status__c, &quot;Cancelled&quot;),
      ISPICKVAL(Status__c, &quot;Deferred&quot;)
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Overdue</label>
    <type>Checkbox</type>
</CustomField>