force-app/main/default/objects/Project_Task__c/fields/Number_of_Dependencies__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Dependencies__c</fullName>
    <label>Number of Dependencies</label>
    <summaryForeignKey>Task_Dependency__c.Predecessor_Task__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>