force-app/main/default/objects/Project_Task__c/fields/Parent_Project__c.field-meta.xml
<CustomField>
    <fullName>Parent_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project Tasks (Parent Project)</relationshipLabel>
    <relationshipName>Child_Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>