force-app/main/default/objects/Project_Task__c/fields/Remaining_Time_Hours__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Time_Hours__c</fullName>
    <formula>Estimation_Hours__c * (1 - Progress__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Time (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>