force-app/main/default/objects/Project_Task__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Story</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Project__c</field>
            <operation>equals</operation>
            <valueField>User_Story__c.Related_Project__c</valueField>
        </filterItems>
        <infoMessage>Please relate this Task to a User Story related to the same Project</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User_Story__c</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>