force-app/main/default/objects/Project_Task__c/listViews/All_Tasks_Excl_Completed_and_Cancelled.listView-meta.xml
<ListView>
    <fullName>All_Tasks_Excl_Completed_and_Cancelled</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Project__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled,Completed,On Hold,Deferred</value>
    </filters>
    <filters>
        <field>Project_Status__c</field>
        <operation>notEqual</operation>
        <value>On Hold</value>
    </filters>
    <label>All Tasks Excl. Completed and Cancelled)</label>
</ListView>