force-app/main/default/objects/Project_Task__c/listViews/Closed_Tasks.listView-meta.xml
<ListView>
    <fullName>Closed_Tasks</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Project__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Completed Tasks</label>
</ListView>