force-app/main/default/objects/Project_Task__c/listViews/My_Tasks_Kanban.listView-meta.xml
<ListView>
    <fullName>My_Tasks_Kanban</fullName>
    <columns>NAME</columns>
    <columns>Priority__c</columns>
    <columns>Project__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Project_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Progress,Review/Testing,Not Started,Deferred,On Hold</value>
    </filters>
    <filters>
        <field>Assigned_To__c</field>
        <operation>equals</operation>
        <value>Mathias Tønder</value>
    </filters>
    <filters>
        <field>Project_Status__c</field>
        <operation>equals</operation>
        <value>Planning,In Progress,Under Review</value>
    </filters>
    <label>My Tasks Kanban</label>
</ListView>