force-app/main/default/objects/Project_Task__c/listViews/On_Hold.listView-meta.xml
<ListView>
    <fullName>On_Hold</fullName>
    <columns>NAME</columns>
    <columns>On_Hold_Reason__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Project__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>On Hold</value>
    </filters>
    <label>On Hold</label>
</ListView>