force-app/main/default/objects/Project_Task__c/listViews/Open_Tasks.listView-meta.xml
<ListView>
    <fullName>Open_Tasks</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Project__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Progress,Review/Testing</value>
    </filters>
    <label>Open Tasks</label>
</ListView>