force-app/main/default/objects/Project_Task__c/listViews/Project_Tasks_Kanban_Board.listView-meta.xml
<ListView>
    <fullName>Project_Tasks_Kanban_Board</fullName>
    <columns>NAME</columns>
    <columns>Priority__c</columns>
    <columns>Project__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Project_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Not Started,In Progress,On Hold,Review/Testing</value>
    </filters>
    <label>Project Tasks Kanban Board</label>
</ListView>